# frpc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_debug.sh  docker-compose.yaml  main.cpp
client/: client.py
comm/: CMakeLists.txt  format.h  macros.h  scoket.h  socket.cc  string_util.cc  string_util.cpp  string_util.h
conf/: config.py  default_conf.py
config/: config.cpp  config.h
demo/: CMakeLists.txt  client.cc  client.h  format.h  main.cpp  reference.cpp  reference.h  test  timer.cpp  timer.h
depracate/py/: .gitignore  ioworker.py  requirements.txt  test.py
depracate/py/client/: baseclient.py
depracate/py/proto/: getlist.proto  order.proto  pay.proto  pay_pb2.py
depracate/py/server/: getlist.py
depracate/py/utils/: base.py
doc/: dev-0614.md  into.md
docker/: Dockerfile  docker-compose.yaml
py/: .gitignore  README.md  baseserver.py  ioworker.py  main.py  requirements.txt  server.py  test.py  test2.py  worker.py
py/client/: baseclient.py  client.py  client_config.py
py/conf/: conf.py
py/discovery/: _consul.py  client.py
py/docker/: README.md
py/proto/: getlist_pb2.py  helloworld.proto  helloworld_pb2.py  order_pb2.py
py/server/: __init__.py  demo.py  helloworld.py  order.py  pay.py  server.py
py/transport/: listener.py  mutex_model.py
py/utils/: base.py
server/: BaseSocket.hpp  CMakeLists.txt  Epoll.cpp  Epoll.h  codec.h  server.cc  server.cpp  server.h  server.py  worker.cpp  worker.h  worker_thread.h
server/codec/: codec.cc
server/config/: config.cc  config.h
server/io/: base.cpp  base.h  base.hpp  bufferpoll.h  epoll.cpp  epoll.h  epoll.hpp  inqueue.h  io_loop.cc  io_loop.h  io_message.h  iouring.cpp  outqueue.cpp  outqueue.h
server/io/base/: base.cpp  list.h
server/net/: bufferpoll.cpp  inqueue.cpp
server/net/base/: base.h  list.cpp
transport/: Listener.py  fd_pass.py  listener.py  lock.py
utils/: read.py
